<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.traveldreamsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_destinos"
        android:name="com.example.traveldreamsapp.ui.destinos.DestinosFragment"
        android:label="@string/menu_destinos"
        tools:layout="@layout/fragment_destinos" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.traveldreamsapp.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_nosotros"
        android:name="com.example.traveldreamsapp.ui.nosotros.NosotrosFragment"
        android:label="@string/menu_nosotros"
        tools:layout="@layout/fragment_nosotros" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.traveldreamsapp.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />

</navigation>