<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo_degradado_dos">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="-100dp"
        app:srcCompat="@drawable/logohor" />

    <!-- Título de la Pantalla -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        android:text="@string/titulo_login"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />


    <!-- Campo Correo Electrónico -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="@android:color/black"
        android:background="@drawable/edittext_background"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:padding="1dp"
        android:textSize="23sp"/>

    <!-- Link Olvidé mi contraseña -->
    <TextView
        android:id="@+id/forgotPasssword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/forgot_pasword"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <!-- Link Registro -->
    <TextView
        android:id="@+id/registerPrompt"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/msjregistrate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>