<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/fondo_degradado_dos"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="379dp"
        android:layout_height="537dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="648dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="-80dp"
                app:srcCompat="@drawable/logo_contraste" />

            <!-- Título de la Pantalla -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/titulo_login"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <!-- Campo Correo Electrónico -->

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <!-- Campo de Contraseña con ícono de visibilidad -->
            <com.google.android.material.textfield.TextInputLayout
                    
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón de Iniciar Sesión -->
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/btn_login"
                android:textSize="21sp" />

            <!-- Link Olvidé mi contraseña -->
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_pasword"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!-- Link Registro -->
            <TextView
                android:id="@+id/registerPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/msjregistrate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
